Replacing the "Code Diff" code